# esp32-internet-for-all

./: .gitignore  CMakeLists.txt  LICENSE  README.md  esp32_flash.sh  iperf_output.py  network_performance.csv  sdkconfig  sdkconfig.old
components/config/: CMakeLists.txt  config.c
components/config/include/: config.h  device.h
components/device/include/: config.h
components/heartbeat/: CMakeLists.txt  heartbeat.c
components/heartbeat/include/: heartbeat.h
components/lwip_custom_hooks/: CMakeLists.txt  lwip_custom_hooks.c
components/lwip_custom_hooks/include/: lwip_custom_hooks.h
components/physim/: CMakeLists.txt  daemon.c  daemon.h  physim.c  ps_uart.h
components/physim/include/: physim.h
components/ring_link/: CMakeLists.txt  broadcast.c  heartbeat.c  ring_link.c
components/ring_link/include/: heartbeat.h  ring_link.h
components/ring_link/test/: CMakeLists.txt  test_ring_link.c
components/ring_link_internal/: CMakeLists.txt  broadcast.c  heartbeat.c  ring_link_internal.c
components/ring_link_internal/include/: broadcast.h  heartbeat.h  ring_link_internal.h
components/ring_link_internal/test/: test_prueba.c
components/ring_link_lowlevel/: CMakeLists.txt  Kconfig  ring_link_lowlevel.c  ring_link_lowlevel_impl.c  ring_link_lowlevel_spi.c  ring_link_payload.c  spi.c  uart.c
components/ring_link_lowlevel/include/: ring_link_lowlevel.h  ring_link_lowlevel_impl.h  ring_link_lowlevel_spi.h  ring_link_payload.h  uart.h
components/ring_link_lowlevel/test/: CMakeLists.txt  test_ring_link_lowlevel.c
components/ring_link_lowlevel_mock/: CMakeLists.txt  ring_link_lowlevel_mock.c
components/ring_link_lowlevel_mock/include/: ring_link_lowlevel_mock.h
components/ring_link_netif/: CMakeLists.txt  ring_link_netif.c  ring_link_netif_common.c  ring_link_netif_rx.c  ring_link_netif_tx.c  udp_spi.c
components/ring_link_netif/include/: ring_link_netif.h  ring_link_netif_common.h  ring_link_netif_defaults.h  ring_link_netif_rx.h  ring_link_netif_tx.h  udp_spi.h
components/ring_link_payload/: CMakeLists.txt
components/route/: CMakeLists.txt  route.c
components/route/include/: route.h
components/route/test/: CMakeLists.txt  test_route.c
components/spi/: CMakeLists.txt  Kconfig  physical_spi.c  spi.c  spi_netif.c  spi_rx_netif.c  spi_tx_netif.c  udp_spi.c
components/spi/include/: physical_spi.h  spi.h  spi_netif.h  spi_rx_netif.h  spi_tx_netif.h  udp_spi.h
components/spi_internal/: CMakeLists.txt  spi_internal.c
components/spi_internal/include/: spi_internal.h
components/spi_lowlevel/: CMakeLists.txt  spi_lowlevel.c
components/spi_lowlevel/include/: spi_lowlevel.h
components/spi_netif/: CMakeLists.txt  spi_netif.c
components/spi_netif/include/: spi_netif.h  udp_spi.h
components/spi_payload/: CMakeLists.txt  spi_payload.c
components/spi_payload/include/: spi_payload.h
components/utils/: CMakeLists.txt  utils.c
components/wifi/: CMakeLists.txt  Kconfig  wifi.c
docs/: hardware.md  software.md
docs/kicad/: README.md  ap.kicad_sch  main.kicad_sch  node.kicad_pcb  node.kicad_pro  node.kicad_sch
docs/tests/: notes.md  ping.txt  ping_burst.txt  tcp_1m.txt  tcp_2m.txt  tcp_3m.txt  tcp_4m.txt  tcp_R1m.txt  tcp_R2m.txt  tcp_R3m.txt  tcp_R4m.txt  traceroute.txt  udp_1m.txt  udp_2m.txt  udp_3m.txt  udp_4m.txt  udp_R1m.txt  udp_R2m.txt  udp_R3m.txt  udp_R4m.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main_original.c  main_v2.c  nvs.c  test_board.c  test_integration.c  test_spi.c
main/include/: main.h  nvs.h  test_board.h  test_integration.h  test_spi.h
(+2 files in other folders)
