idf_component_register(SRC_DIRS "."
                       INCLUDE_DIRS "."
                       REQUIRES unity
                                ring_link
                                freertos
                                esp_common
                                esp_system
                                )